Change version management to allow clean build

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ universal = 1
 
 [metadata]
 name = cid-cmd
-version = attr: cid.cli.__version__
+version = attr: cid._version.__version__
 keywords = aws, cmd, cli, cost intelligence dashboards
 description = Cloud Intelligence Dashboards deployment helper tool
 long_description = file: README.md
